--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -59,8 +59,28 @@
 
 <script>
 
-</script>
+  function removeTransition(e) {
+    if (e.propertyName === 'transform') {
+      e.target.classList.remove('playing');
+    }
+  } 
 
+  function playSound(e) {
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
+    
+    if (audio && key) {
+      key.classList.add('playing');
+      audio.currentTime = 0;
+      audio.play();
+    }
+  }
+
+  const keys = Array.from(document.querySelectorAll('.key'));
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+  window.addEventListener('keydown', playSound);
+
+</script>
 
 </body>
 </html>
