--- a/02 - JS + CSS Clock/index-START.html
+++ b/02 - JS + CSS Clock/index-START.html
@@ -9,9 +9,9 @@
 
     <div class="clock">
       <div class="clock-face">
-        <div class="hand hour-hand"></div>
-        <div class="hand min-hand"></div>
-        <div class="hand second-hand"></div>
+        <div class="hand hour-hand slow"></div>
+        <div class="hand minute-hand slow"></div>
+        <div class="hand second-hand slow"></div>
       </div>
     </div>
 
@@ -61,12 +61,51 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0, 2.76, 0.9, 0.01);
+    }
+
+    .slow {
+      transition: all 0.8s;
+    }
+
+    .second-hand {
+      background: red;
     }
 
   </style>
 
   <script>
 
+    const secondHand  = document.querySelector('.second-hand');
+    const minuteHand  = document.querySelector('.minute-hand');
+    const hourHand    = document.querySelector('.hour-hand');
+
+    const hands = Array.from(document.querySelectorAll('.hand'));
+    hands.forEach(hand => hand.addEventListener('transitionend', removeSlowTransition));
+
+    window.onload = function() {
+      setInterval(setTime, 50);
+    }
+
+    function setTime(degrees) {
+      const now = new Date();
+
+      secondsDegrees = (now.getSeconds() / 60) * 360 + 90;
+      minutesDegrees = (now.getMinutes() / 60) * 360 + 90;
+      hoursDegrees = (now.getHours() / 12) * 360 + 90;
+
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+      minuteHand.style.transform = `rotate(${minutesDegrees}deg)`;
+      hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
+    }
+
+    function removeSlowTransition(e) {
+      e.target.classList.remove('slow');    
+      e.target.removeEventListener('transitionend', removeSlowTransition);
+    }
 
   </script>
 </body>
